syntax="proto3";

package post_service;
option go_package="genproto/post_service";

message Post {
    int32 id = 1;
    int32 user_id = 2;
    string title = 3;
    string body = 4;
}

message ListPostReq {
    Pagination pagination = 1;
}

message Pagination {
    int32 total = 1;
    int32 pages = 2;
    int32 page = 3;
    int32 limit = 4;
    Links links = 5;
}

message Links {
    string previous = 1;
    string current = 2;
    string next = 3;
}

message PostReloadReq {
    repeated Post data = 1;
    ListPostReq meta = 2;
}
